--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <meta http-equiv="X-UA-Compatible" content=" IE=edge">
         <meta name = "viewpoint" content ="width=device-width, initial-sc ale=1.0">
-        <title>Jadin Wilkening's Personal Website</title>
+        <title>Jadin Wilkening's Website</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/b607d9895c.js" crossorigin="anonymous"></script>
 </head>
@@ -27,10 +27,9 @@
     </div>
     <main class="bio-container">
         <section class="bio-content">
-            <h1>About Me</h1>
+            <h1>Bio</h1>
             <div class="bio-text">
-                <br><br><p>Hi, I'm Jadin, and this is a bit about me...</p>
-                <p>I am thrilled to introduce myself as a dynamic and ambitious recent graduate from Randolph College, 
+                <br><br><p>I am thrilled to introduce myself as a dynamic and ambitious recent graduate from Randolph College, 
                     where I earned my degree in Computer Science and Mathematics in May 2024. Nestled in the charming town of Lynchburg, VA, my college journey was a blend of academic excellence and vibrant campus life.<br>
 
                     <br>During my time at Randolph, I wore many hats and loved every moment of it. As the President of the Dance Group, I choreographed and performed routines that brought our community together.
